crates/toner-tlb-macros/tests/compile-fail/separate_cell_nested_both.stderr
error: cannot have both `separate_cell_start` and `separate_cell_end` on a field that is already inside an open separate-cell block
 --> tests/compile-fail/separate_cell_nested_both.rs:7:5
  |
7 |     #[tlb(separate_cell_start, separate_cell_end, unpack)]
  |     ^
